# dbop-core

./: .gitignore  CHANGELOG.md  Makefile  README.md  env.example  pyproject.toml
.github/workflows/: ci.yml  integration.yml
docs/: OTEL.md
examples/: .env.sample  Makefile  README.MD  env.example  example.db
examples/_compose/: grafana-dbop-core.json  mysql.yml  otel-collector.yaml  otel.yml  postgres.yml  prometheus.yml
examples/aiomysql-mysql/: main.py  requirements.txt
examples/aiosqlite-sqlite/: main.py  requirements.txt
examples/asyncpg-postgres/: main.py  requirements.txt
examples/mysql-pymysql/: main.py  requirements.txt
examples/otel-smoke/: main.py  requirements.txt
examples/psycopg-postgres/: main.py  requirements.txt
examples/sqlalchemy-sqlite/: main.py  requirements.txt
scripts/: check_version_sync.py
src/dbop_core/: __init__.py  classify.py  core.py  otel_runtime.py  otel_setup.py  types.py
tests/: test_aiomysql_adapter.py  test_aiomysql_adapter_more.py  test_aiosqlite_adapter.py  test_aiosqlite_adapter_edge.py  test_attempt_scope_usage.py  test_backoff_policy.py  test_classifier_dbapi.py  test_classify.py  test_classify_more.py  test_contrib_aiomysql_adapter_fake.py  test_contrib_aiosqlite_adapter_fake.py  test_contrib_asyncpg_adapter_fake.py  test_contrib_dbapi_adapter.py  test_contrib_psycopg_adapter_fake.py  test_core_edges.py  test_dbapi_adapter.py  test_execute_default.py  test_execute_retries.py  test_non_transient_stops_immediately.py  test_otel_optional.py  test_otel_optional_smoke.py  test_overall_timeout_behavior.py  test_pre_attempt_called_each_try.py
tests/integration/: test_deadlocks_aiomysql.py  test_deadlocks_asyncpg.py  (+2 more)
(+7 files in other folders)
